WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63859
Transition LayoutTest using pause API shows wrong result if it tries to pause a transition after its delay time.
https://bugs.webkit.org/show_bug.cgi?id=63859
Summary
Transition LayoutTest using pause API shows wrong result if it tries to pause...
Young Han Lee
Reported
2011-07-02 06:18:46 PDT
Created
attachment 99551
[details]
To reproduce the bug. The attached test passes when it doesn't use the pause API.
Attachments
To reproduce the bug.
(1013 bytes, text/html)
2011-07-02 06:18 PDT
,
Young Han Lee
no flags
Details
Testcase with pause API
(1009 bytes, text/html)
2011-07-02 06:29 PDT
,
Young Han Lee
no flags
Details
LayoutTest with the pause API
(933 bytes, text/html)
2011-07-02 06:32 PDT
,
Young Han Lee
no flags
Details
Patch
(4.08 KB, patch)
2011-07-02 12:03 PDT
,
Young Han Lee
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Young Han Lee
Comment 1
2011-07-02 06:29:10 PDT
Created
attachment 99552
[details]
Testcase with pause API Oops, I uploaded the wrong test.
Young Han Lee
Comment 2
2011-07-02 06:32:08 PDT
Created
attachment 99553
[details]
LayoutTest with the pause API again :-(
Young Han Lee
Comment 3
2011-07-02 12:03:49 PDT
Created
attachment 99556
[details]
Patch
Simon Fraser (smfr)
Comment 4
2011-07-03 09:02:00 PDT
Comment on
attachment 99556
[details]
Patch I don't think this will do the right thing for accelerated animations.
Young Han Lee
Comment 5
2011-07-05 11:14:22 PDT
(In reply to
comment #4
)
> (From update of
attachment 99556
[details]
) > I don't think this will do the right thing for accelerated animations.
Can you be more specific? I failed to find out how this change can break the accelerated animation, and I made sure this change doesn't break both the animation and the transition layout tests on the Qt port enabling accelerated compositing.
Simon Fraser (smfr)
Comment 6
2011-07-05 11:24:55 PDT
I'm not sure that Qt does accelerated animations the same way that Mac does. Does it ever return true from its GraphicsLayer::addAnimation() method?
Young Han Lee
Comment 7
2011-07-06 10:24:48 PDT
(In reply to
comment #6
)
> I'm not sure that Qt does accelerated animations the same way that Mac does. Does it ever return true from its GraphicsLayer::addAnimation() method?
I just ran layout-tests for animations, transitions and compositing on the Mac port in which accelerated compositing is enabled in default, and made sure no testcase fails by this patch. It seems no problem :)
> if (!m_startTime) { > // If we haven't started yet, make it as if we started. > m_compAnim->animationController()->receivedStartTimeResponse(currentTime()); > }
>
> ASSERT(m_startTime);
As I wrote in the changelog, the above code has not worked at all, so the next Assertion always fails when the m_startTime is zero like
Bug 59475
. In other words, this change could affect the testcases that have hit assertion failure, and doesn't make things worse at least.
Simon Fraser (smfr)
Comment 8
2011-07-06 10:31:11 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > I'm not sure that Qt does accelerated animations the same way that Mac does. Does it ever return true from its GraphicsLayer::addAnimation() method? > > I just ran layout-tests for animations, transitions and compositing on the Mac port in which accelerated compositing is enabled in default, and made sure no testcase fails by this patch. > > It seems no problem :)
Did you look at pixel results? I think the failure would only show there. Simon
Young Han Lee
Comment 9
2011-07-07 07:53:24 PDT
(In reply to
comment #8
)
> (In reply to
comment #7
) > > (In reply to
comment #6
) > > > I'm not sure that Qt does accelerated animations the same way that Mac does. Does it ever return true from its GraphicsLayer::addAnimation() method? > > > > I just ran layout-tests for animations, transitions and compositing on the Mac port in which accelerated compositing is enabled in default, and made sure no testcase fails by this patch. > > > > It seems no problem :) > > Did you look at pixel results? I think the failure would only show there. > > Simon
Yes, I also ran pixel tests a while ago and there was nothing wrong, too. If you tell me why you think this change causes failure on accelerated animation, I can dig into that more.
Simon Fraser (smfr)
Comment 10
2011-07-07 08:00:01 PDT
Comment on
attachment 99556
[details]
Patch OK
Young Han Lee
Comment 11
2011-07-07 08:07:18 PDT
Thank you for your review, simon :)
Young Han Lee
Comment 12
2011-07-11 10:26:15 PDT
Simon, could you commit this, please? I'm not yet committer.
WebKit Review Bot
Comment 13
2011-07-11 11:20:35 PDT
Comment on
attachment 99556
[details]
Patch Clearing flags on attachment: 99556 Committed
r90765
: <
http://trac.webkit.org/changeset/90765
>
WebKit Review Bot
Comment 14
2011-07-11 11:20:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug