Patch by Young Han Lee <joybro@company100.net> on 2011-07-11 Reviewed by Simon Fraser.

Transition LayoutTest using pause API shows wrong result if it tries to pause a transition after its delay time.
https://bugs.webkit.org/show_bug.cgi?id=63859

The existing code to set the m_startTime haven't worked because
the animation is not the right state to accept the start event.
This patch just sets the values directly instead of using event.

Source/WebCore:

Test: transitions/delay.html

* page/animation/AnimationBase.cpp:
(WebCore::AnimationBase::freezeAtTime):

LayoutTests:

* transitions/delay-expected.txt: Added.
* transitions/delay.html: Added.

Canonical link: https://commits.webkit.org/80030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90765 268f45cc-cd09-0410-ab3c-d52691b4dbfc